# FinanceApp

./: CMakeLists.txt
android/: AndroidManifest.xml  gradle.properties
src/: CMakeLists.txt  FinanceAppMainWindow.qml  main.cpp  main.qml
src/+android/: main.qml
src/expenses/: CMakeLists.txt  Expenses.cpp  Expenses.hpp  ExpensesList.qml  ExpensesModel.cpp  ExpensesModel.hpp  ExpensesPieChart.qml
tests/: CMakeLists.txt
tests/expenses/: TestExpenses.cmake  TestExpenses.cpp  TestExpensesModel.cmake  TestExpensesModel.cpp
